deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: findmylifepartner-gke
spec:
  replicas: 1
  selector:
    matchLabels:
      app: findmylifepartner
  template:
    metadata:
      labels:
        app: findmylifepartner
    spec:
      containers:
      - name: findmylifepartner-image
        image: gcr.io/PROJECT_ID/IMAGE:TAG
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
